creating features for photo / video taking

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,13 +86,25 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.expophotography"
+    buildFeatures {
+        compose = true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.15'
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
+    namespace 'com.anonymous.expophotography'
     defaultConfig {
-        applicationId "com.expophotography"
+        applicationId 'com.anonymous.expophotography'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     signingConfigs {
         debug {
@@ -149,6 +161,8 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation "androidx.compose.runtime:runtime:1.5.15"  // Match the compiler version
+
 
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
