--- a/app.json
+++ b/app.json
@@ -2,6 +2,22 @@
   "expo": {
     "name": "expophotography",
     "slug": "expophotography",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "android": {
+      "package": "com.anonymous.expophotography"
+    },
+    "splash": {
+      "backgroundColor": "#FFFFFF"
+    },
+    "plugins": [
+      [
+        "react-native-vision-camera",
+        {
+          "cameraPermissionText": "$(PRODUCT_NAME) needs access to your Camera.",
+          "enableMicrophonePermission": true,
+          "microphonePermissionText": "$(PRODUCT_NAME) needs access to your Microphone."
+        }
+      ]
+    ]
   }
 }
