--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "@supabase/supabase-js": "^2.49.1",
+    "axios": "^1.8.3",
     "expo": "~52.0.36",
     "expo-dev-client": "~5.0.12",
+    "expo-location": "^18.0.7",
+    "expo-notifications": "^0.29.14",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "^12.0.5",
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
     "react-native-vision-camera": "^4.6.4"
