--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-maps": "^1.20.1",
