--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.15",
-    "@react-navigation/stack": "^7.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.2.10",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.3",
     "expo": "~52.0.36",
@@ -25,10 +28,11 @@
     "react-native": "0.76.7",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-maps": "^1.20.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-safe-area-context": "^4.0.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.6.4"
   },
   "devDependencies": {
