--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.3",
-    "expo": "~52.0.36",
-    "expo-dev-client": "~5.0.12",
-    "expo-location": "^18.0.7",
+    "expo": "~52.0.46",
+    "expo-dev-client": "~5.0.20",
+    "expo-env-info": "^1.2.2",
+    "expo-location": "~18.0.10",
     "expo-notifications": "^0.29.14",
     "expo-status-bar": "~2.0.1",
-    "expo-task-manager": "^12.0.5",
+    "expo-task-manager": "~12.0.6",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-maps": "^1.20.1",
-    "react-native-safe-area-context": "^4.0.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.6.4"
   },
