--- a/app.json
+++ b/app.json
@@ -23,15 +23,20 @@
     "ios": {
       "bundleIdentifier": "com.anonymous.expophotography",
       "buildNumber": "1",
+      "config": {
+        "googleMapsApiKey": "***REMOVED***"
+      },
       "infoPlist": {
-        "NSCameraUsageDescription": "Allow ExpoPhotography to use the camera.",
+        "NSCameraUsageDescription": "$(PRODUCT_NAME) needs access to your Camera.",
         "NSLocationWhenInUseUsageDescription": "Allow ExpoPhotography to access your location.",
         "NSLocationAlwaysUsageDescription": "Allow ExpoPhotography to always access your location.",
-        "NSMicrophoneUsageDescription": "Allow ExpoPhotography to access your microphone.",
+        "NSMicrophoneUsageDescription": "$(PRODUCT_NAME) needs access to your Microphone.",
         "NSPhotoLibraryUsageDescription": "Allow ExpoPhotography to access your photo library.",
         "UIBackgroundModes": [
+          "location",
           "location"
-        ]
+        ],
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "splash": {
