I have added some extra buttons in the leaderboard screen, that allowed for my friends to test out the features in the app. Also, changes have been made in the app.json which fix issues with iOS notifications not appearing.

--- a/app.json
+++ b/app.json
@@ -27,16 +27,13 @@
         "googleMapsApiKey": "***REMOVED***"
       },
       "infoPlist": {
-        "NSCameraUsageDescription": "$(PRODUCT_NAME) needs access to your Camera.",
-        "NSLocationWhenInUseUsageDescription": "Allow ExpoPhotography to access your location.",
-        "NSLocationAlwaysUsageDescription": "Allow ExpoPhotography to always access your location.",
-        "NSMicrophoneUsageDescription": "$(PRODUCT_NAME) needs access to your Microphone.",
-        "NSPhotoLibraryUsageDescription": "Allow ExpoPhotography to access your photo library.",
-        "UIBackgroundModes": [
-          "location",
-          "location"
-        ],
-        "ITSAppUsesNonExemptEncryption": false
+        "NSCameraUsageDescription":          "$(PRODUCT_NAME) needs access to your Camera.",
+        "NSLocationWhenInUseUsageDescription":"Allow ExpoPhotography to access your location while you are using the app.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription":"Allow ExpoPhotography to access your location in the background.",
+        "NSMicrophoneUsageDescription":      "$(PRODUCT_NAME) needs access to your Microphone.",
+        "NSPhotoLibraryUsageDescription":    "Allow ExpoPhotography to access your photo library.",
+        "UIBackgroundModes": ["location"],
+        "ITSAppUsesNonExemptEncryption":     false
       }
     },
     "splash": {
