--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "expophotography",
     "slug": "expophotography",
+    "scheme": "expophotography",
     "version": "1.0.0",
     "android": {
       "package": "com.anonymous.expophotography",
